--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -36,6 +36,7 @@ Vagrant.configure(2) do |config|
 
 # Grunt serve nodejs server
   config.vm.network "forwarded_port", guest: 9000, host: 9000
+  config.vm.network "forwarded_port", guest: 8080, host: 9003
 
 # Livereload port
   config.vm.network "forwarded_port", guest: 35729, host: 35729
@@ -44,7 +45,7 @@ Vagrant.configure(2) do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  config.vm.synced_folder "..", "/home/vagrant/src/tictactoe"
+  # config.vm.synced_folder "..", "/home/vagrant/src/tictactoe"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -53,7 +54,7 @@ Vagrant.configure(2) do |config|
   # config.vm.provider "virtualbox" do |vb|
   #   # Display the VirtualBox GUI when booting the machine
   #   vb.gui = true
-  #
+  
   #   # Customize the amount of memory on the VM:
   #   vb.memory = "1024"
   # end
